pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod       
  labels: {}
  annotations: {}
spec:
  containers:
    - name: nginx
      image: nginx
