app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: {}
  annotations: {}
spec:
  strategy:
    # type: Recreate
    type: RollingUpdate  # Recreate
    rollingUpdate:
      maxUnavailable: 23%
      maxSurge: 50% # ceil(current pod * 50%) = extra number of pods
  replicas: 3
  selector:
    matchLabels:         
      app: app-deployment
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
        - name: app
          image: app:1.28
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: 0rfiaz/flask-application:v7
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-app-ingress
spec:
  ingressClassName: app
  rules:
    - host: example.com
      http:
        paths:               # <-- paths is nested under http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 8080
